--- a/all.yml
+++ b/all.yml
@@ -6,13 +6,6 @@
   - role: dock
     apps:
     - /Applications/Firefox.app
-    - /Applications/Airmail.app
-    - /Applications/Dashlane.app
-    - /Applications/Spotify.app
-    - /Applications/Airmail.app
-    - "/Applications/Adobe Photoshop CC/Adobe Photoshop CC.app"
-    - "/Applications/Adobe Illustrator CC/Adobe Illustrator.app"
-    - /Applications/Atom.app
     - /Applications/iTerm.app
     - /Applications/Dash.app
     folders:
@@ -36,8 +29,8 @@
   # cli
   # shell tooling
   - role: git
-    git_user_name: Bob Bob
-    git_user_email: bob.bob@example.com
+    git_user_name: gilbert-m
+    git_user_email: gilbertm@example.com
   - role: legit
   - role: hub
   - role: brew_package
@@ -52,20 +45,18 @@
     package_name: bower
   - role: cask_package
     package_name: java
-  - role: brew_package
-    package_name: android-sdk
   ## databases
+#  - role: brew_package
+#    package_name: postgres
   - role: brew_package
-    package_name: postgres
-  - role: brew_package
-    package_name: mongodb
+    package_name: mysql
   ## deployment
-  - role: brew_package
-    package_name: heroku-toolbelt
+ # - role: brew_package
+ #   package_name: heroku-toolbelt
   # - role: brew_package
   #   package_name: ansible # Hey ! Already there !
 
   # gui
   ## text editors
-  - role: cask_package
-    package_name: atom
+  #- role: cask_package
+  #  package_name: atom
